<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_button_text"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/stop_button_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/numberStepsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_steps_text"
        android:layout_marginTop="15dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance_text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/averagePaceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_pace_text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textStyle="bold" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>